# ulog-battery-est

./: .coverage  .gitignore  CMakeLists.txt  README.md  requirements.txt
.github/workflows/: batlib.yaml
batlib/: model.py  test.py
data/: 15_26_6.ulog  21_27_56.ulog  45_percent_stopped_early.ulog  Full_batt_drain_60_percent_1.ulog  full_batt_drain_2.ulog  hover_1.ulog  idle_1.ulog  idle_LED_1.ulog  model_estimation_test_1.ulog  model_estimation_test_2.ulog  quick_hover_10_percent.ulog  quick_hover_15_percent.ulog  quick_hover_17_percent.ulog  quick_hover_5_percent.ulog  reference_1c.ulog
libs/libbat/: CMakeLists.txt
libs/libbat/apps/battery-simulator/: main.cpp
libs/libbat/include/verge/mission-command/: BatteryCoefficients.h  BatteryModel.h  test.h
libs/libbat/src/: BatteryModel.cpp  test.cpp
testing/: model_test.py  test_model.py  test_test.py
tools/: Battery-Model.py  BatteryModel.py  BatteryModelDriver.py  batt-testing.py  batt_testing.py  pyulog-test.py
